# RhySe-TTDS

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
data/: prepare_torgo.py  prepare_torgo_dataset.py  torgo_manifest_final.csv
data/torgo_all_pinyin/: duration.json  metadata.csv
data/torgo_all_pinyin/raw/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/torgo_f01_pinyin/: duration.json  metadata.csv  raw.arrow
data/torgo_f03_pinyin/: cache-9cc43b8511964fa0.arrow  duration.json  metadata.csv  raw.arrow
data/torgo_f04_pinyin/: duration.json  metadata.csv  raw.arrow
data/torgo_m01_pinyin/: duration.json  metadata.csv  raw.arrow
data/torgo_m02_pinyin/: duration.json  metadata.csv  raw.arrow
data/torgo_m03_pinyin/: duration.json  metadata.csv  raw.arrow
data/torgo_m04_pinyin/: duration.json  metadata.csv  raw.arrow
data/torgo_m05_pinyin/: duration.json  metadata.csv  raw.arrow
scripts/: batch_RhySe-TTDS_chained_cfg_eval.py  batch_RhySe-TTDS_chained_cfg_rhyss_eval.py  batch_RhySe-TTDS_eval2_adaptive_ss.py  batch_RhySe-TTDS_eval2_rhythm_adaptive_ss.py  batch_RhySe-TTDS_severity_unified_eval.py  batch_f5tts_eval2.py  make_torgo_all_pinyin.py  run_batch_RhySe-TTDS.sh  run_batch_RhySe-TTDS_chained_cfg_eval.sh  run_batch_RhySe-TTDS_eval2_adaptive_ss.sh  run_batch_RhySe-TTDS_eval2_rhythm_adaptive_ss.sh  run_batch_RhySe-TTDS_severity_unified_eval.sh  run_batch_f5tts_eval2.sh  run_train_RhySe-TTDS_torgo_all_sev.sh
src/f5_tts/infer/: utils_infer.py
src/f5_tts/model/: cfm.py  dataset.py  trainer.py
src/f5_tts/train/: finetune_cli.py  finetune_gradio.py
src/rhyse_ttds/: api.py  socket_server.py
src/rhyse_ttds/eval/: README.md  (+6 more)
(+30 files in other folders)
